<?xml version="1.0"?>
<package format="2">
  <name>camera-actuation</name>
  <version>0.0.0</version>
  <description>This package moves cameras</description>
  <maintainer email="aksel.lenes@gmail.com">Aksel Lenes</maintainer>
  <license>MIT</license>
  <url type="website">http://vortexntnu.no</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>vortex_msgs</build_depend>
  <build_depend>roslint</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>vortex_msgs</exec_depend>
</package>
